fix: fix Topic Content img overflow

--- a/src/components/Topic/TopicContent.scss
+++ b/src/components/Topic/TopicContent.scss
@@ -1,3 +1,6 @@
 .container {
   width: 1000px;
+  img {
+    max-width: 100%;
+  }
 }
